<resources>
    <string name="app_name">HelloWorld</string>
    <string name="btn1">Cancelar</string>
    <string name="txtDatos">ɪɴɢʀᴇsᴀ ᴛᴜs ᴅᴀᴛᴏs 📋</string>
    <string name="txtMuestraDatos">ʟᴏs ᴅᴀᴛᴏs sᴏɴ 📋:</string>
    <string name="txtFormulario">ғᴏʀᴍᴜʟᴀʀɪᴏ</string>
    <string name="btnFormulario">Formulario</string>
    <string name="txtNombre">Ingresa tu Nombre:</string>
    <string name="txtNombre2">Nombre:</string>
    <string name="txtTelefono">Ingresa tu Telefono 📲</string>
    <string name="txtTelefono2">Telefono 📲:</string>
    <string name="txtFecha">Fecha de Nacimiento 📆:</string>
    <string name="txtGenero">ɢᴇɴᴇʀᴏ❗️</string>
    <string name="txtFemenino">Femenino 👩🏼</string>
    <string name="txtMasculino">Masculino 👦🏼</string>
    <string name="txtColor">ᴄᴜᴀʟ ᴇs ᴛᴜ ᴄᴏʟᴏʀ ғᴀᴠᴏʀɪᴛᴏ❓</string>
    <string name="txtColor2">ᴄᴏʟᴏʀ ғᴀᴠᴏʀɪᴛᴏ:</string>
    <string name="txtMorado">Morado</string>
    <string name="txtAzul">Azul</string>
    <string name="txtAmarillo">Amarillo</string>
    <string name="txtVerde">Verde</string>
    <string name="txtNegro">Negro</string>
    <string name="btnGuardar">Mostrar</string>
    <string name="txtSalir">Limpiar </string>
    <string name="button">Button</string>
    <string name="btnSalir2">Salir</string>
    <string name="ejemplo_1">¡ Ejemplo 1 🤓 !</string>
    <string name="textview">TextView</string>
    <string name="txtSalir2">Salir</string>
    <string name="txtAnterior">Anterior</string>
    <string name="txtSiguiente">siguiente</string>
    <string name="txtFotografia">Fotografia:</string>
    <string name="btnFoto">Foto</string>
    <string name="btnCreditos">Creditos</string>
</resources>