<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtFormulario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtFormulario"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/txtDatos"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName"
            android:paddingLeft="10sp"
            android:paddingRight="10sp" />

        <EditText
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtFecha"
            android:inputType="date"
            android:paddingLeft="10sp"
            android:paddingRight="10sp" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txtTelefono"
            android:inputType="phone"
            android:paddingLeft="10sp"
            android:paddingTop="10sp"
            android:paddingRight="10sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/txtColor"
            android:textAlignment="center"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAzul" />

        <CheckBox
            android:id="@+id/cbAmarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAmarillo" />

        <CheckBox
            android:id="@+id/cbMorado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMorado" />

        <CheckBox
            android:id="@+id/cbNegro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNegro" />

        <CheckBox
            android:id="@+id/cbVerde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtVerde" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:text="@string/txtGenero"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtFemenino" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtMasculino" />

            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnGuardar" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSalir" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>