<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Datos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/txtMuestraDatos"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="10sp"
                android:text="@string/txtNombre2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtNombreD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="10sp"
                android:text="@string/txtFecha"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtFechaD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="10sp"
                android:text="@string/txtTelefono2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtTelefonoD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="10sp"
                android:text="@string/txtColor2"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtColorFavD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15sp"
                android:paddingBottom="10sp"
                android:text="@string/txtGenero"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtGeneroD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/txtAnterior"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSiguiente"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>